force-app/main/default/objects/NCSP_Schedule_A_Line_Item__c/NCSP_Schedule_A_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Gitlab 23515 This is a junction object between NCSP Schedule A and NCSP Service custom objects</description>
    <label>NCSP Schedule A Line Item</label>
    <nameField>
        <displayFormat>NSAL-{0000}</displayFormat>
        <label>Line Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCSP Schedule A Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>