force-app/main/default/objects/NCSP_Schedule_A_Line_Item__c/fields/Is_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Is_Minimum__c</fullName>
    <formula>AND(NCSP_Service__r.Is_Minimum__c, Exception_Rate__c !=0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Minimum</label>
    <type>Checkbox</type>
</CustomField>