force-app/main/default/objects/NCSP_Schedule_A_Line_Item__c/fields/NCSP_Schedule_A__c.field-meta.xml
<CustomField>
    <fullName>NCSP_Schedule_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCSP Schedule A</label>
    <referenceTo>NCSP_Schedule_A__c</referenceTo>
    <relationshipLabel>NCSP Schedule A Line Items</relationshipLabel>
    <relationshipName>NCSP_Schedule_A_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>