force-app/main/default/objects/NCSP_Schedule_A_Line_Item__c/fields/Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Unit_Rate__c</fullName>
    <description>Created this field as part of NCSP Optimization Project Gitlab #24112</description>
    <label>Unit Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>