force-app/main/default/objects/NCSP_Schedule_A_Line_Item__c/validationRules/Exception_Rate_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Exception_Rate_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Exception_Rate__c),NOT( ISNEW() ))</errorConditionFormula>
    <errorDisplayField>Exception_Rate__c</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>