force-app/main/default/objects/NCSP_Schedule_A_Line_Item__c/validationRules/Schedule_A_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Schedule_A_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(NCSP_Schedule_A__c  ),NOT( ISNEW() ))</errorConditionFormula>
    <errorDisplayField>NCSP_Schedule_A__c</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>