force-app/main/default/objects/NCSP_Schedule_A_Line_Item__c/validationRules/UOM_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>UOM_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(  UOM__c ),NOT( ISNEW() ))</errorConditionFormula>
    <errorDisplayField>UOM__c</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>