force-app/main/default/objects/NCSP_Schedule_A_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NCSP_Service__c</columns>
    <columns>Description__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Exception_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>