force-app/main/default/objects/NCSP_Schedule_A_Line_Item__c/listViews/Bulk_update.listView-meta.xml
<ListView>
    <fullName>Bulk_update</fullName>
    <columns>NAME</columns>
    <columns>NCSP_Schedule_A__c</columns>
    <columns>NCSP_Service__c</columns>
    <columns>Exception_Rate__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Scale_Pricing_Indicator__c</columns>
    <columns>UOM__c</columns>
    <filterScope>Everything</filterScope>
    <label>Bulk Update</label>
</ListView>